--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=qt,qtcreator,c++
 
 ### Folders Structure ###
+libs/*
 libs/aquila-master/*
 libs/armadillo-10.7.0/*
 libs/doxy/*
